# gdpval-cli

./: .env.example  .gitignore  README.md  agent_config.yaml  pyproject.toml  requirements.txt
gdpval_bench/: __init__.py  __main__.py  agent_config.py  config.json  evaluator.py  run_benchmark.py  sandbox.py  task_loader.py  task_values.jsonl
gdpval_bench/meta_prompts/: Accountants_and_Auditors.json  Administrative_Services_Managers.json  Audio_and_Video_Technicians.json  Buyers_and_Purchasing_Agents.json  Child_Family_and_School_Social_Workers.json  Compliance_Officers.json  Computer_and_Information_Systems_Managers.json  Concierges.json  Counter_and_Rental_Clerks.json  Customer_Service_Representatives.json  Editors.json  Film_and_Video_Editors.json  Financial_Managers.json  Financial_and_Investment_Analysts.json  First-Line_Supervisors_of_Non-Retail_Sales_Workers.json  First-Line_Supervisors_of_Office_and_Administrative_Support_Workers.json  First-Line_Supervisors_of_Police_and_Detectives.json  First-Line_Supervisors_of_Production_and_Operating_Workers.json  First-Line_Supervisors_of_Retail_Sales_Workers.json  General_and_Operations_Managers.json  Industrial_Engineers.json  Lawyers.json  Mechanical_Engineers.json  Medical_Secretaries_and_Administrative_Assistants.json  Medical_and_Health_Services_Managers.json  News_Analysts_Reporters_and_Journalists.json  Nurse_Practitioners.json  Order_Clerks.json  Personal_Financial_Advisors.json  Pharmacists.json  Private_Detectives_and_Investigators.json  Producers_and_Directors.json  Project_Management_Specialists.json  (+12 more)
(+1 files in other folders)
